syntax = "proto3";

package go.micro.service.dbproxy;

service DBProxyService {
    // 执行用户注册
    rpc ExecuteUserSignup(ReqSignup) returns (RespSignup){}
    // 执行用户登录
    rpc ExecuteUserSignin(ReqSignin) returns (RespSignin){}
    // 更新token
    rpc ExecuteUpdateToken(ReqUpdateToken) returns (RespUpdateToken){}
    // 获取用户token
    rpc ExecuteGetToken(ReqGetToken) returns (RespGetToken){}
}

message ReqSignup {
    string username = 1;
    string encPasswd = 2;
}

message RespSignup {
    int32 code = 1;
    string message = 2;
}

message ReqSignin {
    string username = 1;
    string encPasswd = 2;
}

message RespSignin {
    int32 code = 1;
    string token = 2;
    string message = 3;
}

message ReqUpdateToken{
    string username = 1;
    string token = 2;
}

message RespUpdateToken {
    int32 code = 1;
}

message ReqGetToken{
    string username = 1;
}

message RespGetToken{
    int32 code = 1;
    string token = 2;
    string message = 3;
}